--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     text-shadow: 1px 1px 5px white;
     
 }
-.tabl {
+td {
     width: 150px;
 }
 
@@ -17,11 +17,3 @@ body {
 
 }
 
-.tabliza {
-    margin: auto;
-}
-
-.header {
-      
-
-}
