--- a/bimprofi/src/components/Home/Slides/Slide2/Slide2.module.css
+++ b/bimprofi/src/components/Home/Slides/Slide2/Slide2.module.css
@@ -1,9 +1,9 @@
 .slide2 {
   margin-top: 20px;
   overflow: hidden;
-  min-height: 500px;
+  
   background-color: #e7e7e7;
-  justify-content: space-between;
+ 
   }
 .info {
   margin: 20px;
@@ -13,13 +13,16 @@
   width: 280px;
 }
 
-.img1 {
-  position: relative;
-  top: 0px;
-
-  height: 350px;
-  width: 350px;
-  border-radius: 175px;
-  background-image: url(./../../../../img/notebook.jpg);
-  background-size: cover;
+/* для шиширы экрана 1200 и более */
+@media (min-width: 1200px) {
+  .slide2 {
+    display: inline;
+    
+  }
+  
+  .info {
+    
+    margin: 20px auto;
+    text-align: left;
+  }
 }
