--- a/bimprofi/src/components/Header/Header.module.css
+++ b/bimprofi/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
   height: 60px;
   padding: 10px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 @media (min-width: 768px){
