--- a/bimprofi/src/components/Projects/Slide/Slide.module.css
+++ b/bimprofi/src/components/Projects/Slide/Slide.module.css
@@ -1,59 +1,55 @@
-.slide2 {
+.slide {
   margin: 20px auto;
-}
-.img:hover {
-  opacity: 1;
+  overflow: hidden;
+  
 }
 .head {
+  
+  
   background: white;
   text-align: center;
   padding: 10px;
 }
 .info {
   margin-top: 20px;
+  
   background: white;
   text-align: center;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
 }
 .pic {
   margin: 20px;
 }
 .img {
-  opacity: 65%;
-
+  
   height: 100px;
 }
-
 /* для шиширы экрана 768 и более */
 @media (min-width: 768px) {
-  .info {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
+ 
   .img {
-    height: 100%;
-    max-height: 120px;
+    height: 200px;
   }
+ 
 }
-
 /* для шиширы экрана 1200 и более */
 @media (min-width: 1200px) {
-  .slide2 {
+  .slide {
+    
     margin: 20px auto;
   }
 
   .info {
     margin: 20px auto;
     text-align: center;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
   }
-  .img {
-    height: 100%;
-    max-height: 120px;
-  }
-  .pic {
-    margin: 20px;
-  }
+}
+.pic {
+  margin: 20px;
+  display: inline-block;
+  justify-content: space-between;
+  opacity: 25%;
+  background-color: #e7e7e7;
+}
+.img {
+  height: 250px;
 }
