--- a/bimprofi/src/components/Footer/Footer.module.css
+++ b/bimprofi/src/components/Footer/Footer.module.css
@@ -4,7 +4,8 @@
   max-width: 1600px;
   text-align: center;
   background-color: #e7e7e7;
-  margin-top: 20px;
+  margin-bottom: 20px;
+  
 }
 .footerText {
   line-height: 60px;
