--- a/bimprofi/src/components/Header/Header.module.css
+++ b/bimprofi/src/components/Header/Header.module.css
@@ -1,9 +1,9 @@
 .hdr {
-  
-  padding: 10px;
+  padding-top: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  
 }
 @media (min-width: 768px) {
   .hdr {
