--- a/bimprofi/src/components/Home/Slides/Slide2/Slide2.module.css
+++ b/bimprofi/src/components/Home/Slides/Slide2/Slide2.module.css
@@ -7,8 +7,7 @@
 .head {
   background: white;
   text-align: center;
-  padding: 10px;
-}
+ }
 .info {
   margin-top: 20px;
   background: white;
@@ -48,6 +47,7 @@
     text-align: center;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
+    margin-bottom: 20px;
   }
   .img {
     height: 100%;
